--- a/markup/components/user-messages/user-messages.pug
+++ b/markup/components/user-messages/user-messages.pug
@@ -11,25 +11,25 @@ mixin user-messages()
             //- +heading(1) Messages
             +e.content
                 +e.left.js-user-messages-scrollable.active
-                    +message('nikolas.png', 'Nikolas', '10 hours ago')._truncate.active
+                    +message('nikolas.png', 'Nikolas', '10 hours ago')._truncate.active(data-dialog-id=Math.random().toString(36).replace('.', ''))
                         | Eva moved to LA a few months ago to lorem ispum dolor sit amet
-                    +message('valentin.png', 'Valentin', '1 hours ago', null, null, true)._truncate
+                    +message('valentin.png', 'Valentin', '1 hours ago', null, null, true)._truncate(data-dialog-id=Math.random().toString(36).replace('.', ''))
                         | We have officially
-                    +message('john.png', 'John', 'Dec 23, 2016', 1)._truncate
+                    +message('john.png', 'John', 'Dec 23, 2016', 1)._truncate(data-dialog-id=Math.random().toString(36).replace('.', ''))
                         | Check out this exclusive video on some video service
-                    +message('andrew.png', 'Andrew', '10 hours ago', null, true)._truncate
+                    +message('andrew.png', 'Andrew', '10 hours ago', null, true)._truncate(data-dialog-id=Math.random().toString(36).replace('.', ''))
                         | Good luck everyone!
-                    +message('orlando.png', 'Orlando', '10 hours ago')._truncate
+                    +message('orlando.png', 'Orlando', '10 hours ago')._truncate(data-dialog-id=Math.random().toString(36).replace('.', ''))
                         | Mark Rockwell joined the program 3
-                    +message('kira.png', 'Kira', '10 hours ago')._truncate
+                    +message('kira.png', 'Kira', '10 hours ago')._truncate(data-dialog-id=Math.random().toString(36).replace('.', ''))
                         | Eva moved to LA a few months ago to lorem ispum dolor sit amet
-                    +message('valentin.png', 'Valentin', '1 hours ago', null, null, true)._truncate
+                    +message('valentin.png', 'Valentin', '1 hours ago', null, null, true)._truncate(data-dialog-id=Math.random().toString(36).replace('.', ''))
                         | We have officially
-                    +message('john.png', 'John', 'Dec 23, 2016', 1)._truncate
+                    +message('john.png', 'John', 'Dec 23, 2016', 1)._truncate(data-dialog-id=Math.random().toString(36).replace('.', ''))
                         | Check out this exclusive video on some video service
-                    +message('andrew.png', 'Andrew', '10 hours ago', null, true)._truncate
+                    +message('andrew.png', 'Andrew', '10 hours ago', null, true)._truncate(data-dialog-id=Math.random().toString(36).replace('.', ''))
                         | Good luck everyone!
-                    +message('orlando.png', 'Orlando', '10 hours ago')._truncate
+                    +message('orlando.png', 'Orlando', '10 hours ago')._truncate(data-dialog-id=Math.random().toString(36).replace('.', ''))
                         | Mark Rockwell joined the program 3
                 +e.right
                     +e.header
