--- a/markup/components/user-nav/user-nav.styl
+++ b/markup/components/user-nav/user-nav.styl
@@ -38,6 +38,7 @@
             padding-right: 15px
             width: 160px
             flex: 1
+            flex-shrink: 0;
 
         &:not(:first-child)
             border-left: 1px solid borderColor
