--- a/markup/components/user-nav/user-nav.styl
+++ b/markup/components/user-nav/user-nav.styl
@@ -37,7 +37,7 @@
             padding-left: 15px
             padding-right: 15px
             width: 160px
-            flex: 1
+            flex: auto;
             flex-shrink: 0;
 
         &:not(:first-child)
