--- a/markup/components/search-bar/search-bar.styl
+++ b/markup/components/search-bar/search-bar.styl
@@ -32,12 +32,14 @@
         padding: 0 24px
         font-size: 16px
         min-width: 0
+        position: relative;
+        z-index: 10;
 
         &::placeholder
             opacity 0
 
         .search-bar_dark &
-            color: #fff
+            color: #fff !important
 
         &:focus + .search-bar__placeholder
             display: none !important
@@ -56,7 +58,7 @@
         ellipsis(100%)
 
         .search-bar_dark &
-            color: #fff
+            color: #fff !important
 
         span
             display: none
