--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -226,3 +226,7 @@
         +below(768px)
             font-size: 14px
             color: rgba(darkGreyColor, .6);
+
+    .accordion__content
+        +below(768px)
+            padding: 0
