--- a/markup/components/profile-photo-popup/profile-photo-popup.styl
+++ b/markup/components/profile-photo-popup/profile-photo-popup.styl
@@ -12,6 +12,9 @@
         z-index: 100
         pointer-events all !important
 
+        +below(1024px)
+            display flex !important
+
     +below(1024px)
         flex-direction: row
         justify-content: center
@@ -32,6 +35,13 @@
         box-shadow 0 10px 40px rgba(29, 29, 29, .1)
         background-color darkGreyColor
         pointer-events: all
+
+        +below(1024px)
+            position absolute
+            left 0
+            right 0
+            bottom 0
+            z-index 1
 
     &__link
         color rgba(#fff, .5)
@@ -142,22 +152,22 @@
         m-transition(opacity)
 
     &__container
+        position relative
         margin: auto
         display: block
         max-width: 916px
         width: 100%
 
-        +below(768px)
-            height: 100%
-
         +below(1024px)
-            margin: auto
+            width 100%
+            height 100%
+            padding-bottom 60px
 
     &__gallery
         width: 100%
 
-        +below(768px)
-            height: calc(100vh - 60px)
+        +below(1024px)
+            height 100%
 
         &-item
             background-color: darkGreyColor
