--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -1,6 +1,11 @@
 @import 'rupture'
 // Common styles of the project
 
+html *
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-user-select: none;
+    -webkit-touch-callout:none;
+
 .hide-when-header-fixed
     m-transition(all)
 
