--- a/markup/components/popup-welcome/popup-welcome.styl
+++ b/markup/components/popup-welcome/popup-welcome.styl
@@ -81,10 +81,6 @@
             +below(768px)
                 margin-top 10px
 
-        &:last-child
-            +below(768px)
-                margin-bottom 10px
-
     &__count-info
         border-left 1px solid transparent
         padding-right 28px
@@ -97,6 +93,7 @@
             padding-right 0
 
     &__terms
+        display inline-block
         opacity .5
         font-size 16px
         letter-spacing 1px
