--- a/markup/components/profile-common-popup/profile-common-popup.styl
+++ b/markup/components/profile-common-popup/profile-common-popup.styl
@@ -5,7 +5,7 @@
     .avatar
         display: none
 
-    +below(700px)
+    +below(768px)
         flex-direction: column
         align-self center
 
@@ -14,7 +14,7 @@
         padding: 30px;
         margin-left: -20px;
 
-        +below(700px)
+        +below(768px)
             left: 50%;
             transform: translateX(-50%);
             margin-left: 0;
@@ -23,7 +23,7 @@
             display: none
 
     &__card
-        +below(700px)
+        +below(768px)
             display: flex
             flex-direction: column
             align-items: center
@@ -65,7 +65,7 @@
             width: 258px
             background-color: darkGreyColor
 
-            +below(700px)
+            +below(768px)
                 width: 100%
 
                 .image-bg
@@ -77,7 +77,7 @@
             & ^[0]__footer
                 padding: 0 25px
 
-                +below(700px)
+                +below(768px)
                     &_column
                         height: auto
                         margin-top: 30px
@@ -96,7 +96,7 @@
     &__button
         min-width: 207px
 
-        +below(700px)
+        +below(768px)
             width: 100%
             margin-left: 25px
             margin-right: 25px
@@ -119,7 +119,7 @@
         display: block
         text-align: center
 
-        +below(700px)
+        +below(768px)
             & + ^[0]__footer
                 display: none
 
@@ -128,7 +128,7 @@
             padding-right: 18px
 
         &__content
-            +below(700px)
+            +below(768px)
                 padding-left: 12px
                 padding-right: 12px
                 padding-bottom: 37px
@@ -148,7 +148,7 @@
                 margin-top: 40px
                 margin-bottom: 40px
 
-            +below(700px)
+            +below(768px)
                 display: flex
                 align-items: initial
                 width: 100%
@@ -174,7 +174,7 @@
             fill: mainColor
             flex-shrink: 0
 
-            +below(700px)
+            +below(768px)
                 align-self: center
                 margin-right: 21px
 
@@ -190,7 +190,7 @@
             line-height 1.375
             text-align: center
 
-            +below(700px)
+            +below(768px)
                 margin-top: 11px
 
     // qr code popup
@@ -201,7 +201,7 @@
         &__share
             display: none
 
-        +below(700px)
+        +below(768px)
             display: none
 
             & + ^[0]__footer
@@ -232,10 +232,13 @@
         padding: 35px 30px
         height: 100%
 
+        @below(768px)
+            height: auto
+
         &__checked
             display: none
 
-            +below(700px)
+            +below(768px)
                 display: block
 
         &__heading
@@ -247,21 +250,21 @@
             padding-bottom: 36px
             border-bottom: 1px solid borderColor
 
-            +below(700px)
+            +below(768px)
                 display: block
 
-        +below(700px)
+        +below(768px)
             padding: 0
 
         .info-control
-            +below(700px)
+            +below(768px)
                 &__box
                     border-color: transparent
 
             &:not(:last-child)
                 margin-bottom: 12px
 
-                +below(700px)
+                +below(768px)
                     margin-bottom: 0
 
         & ~ ^[0]__footer ^[0]__button
@@ -284,7 +287,7 @@
             font-weight 400
             line-height 1.375
 
-            +below(700px)
+            +below(768px)
                 padding: 19px 20px
                 border: 0
                 height: 237px
