--- a/markup/components/profile-photo-popup/profile-photo-popup.styl
+++ b/markup/components/profile-photo-popup/profile-photo-popup.styl
@@ -112,8 +112,9 @@
         top: 0
         z-index: 1
         transform: translate3d(0, 0, 0)
-        m-transition: transform .5s ease-in-out
+        transition: transform .5s ease-in-out
         pointer-events: all
+        outline: none
 
         &:hover
 
