--- a/markup/pages/model-list-search-result.pug
+++ b/markup/pages/model-list-search-result.pug
@@ -16,6 +16,7 @@ include ../components/profile-photo-popup/profile-photo-popup
 include ../components/auth-popup/auth-popup
 include ../components/map/map
 include ../components/model-map/model-map
+include ../components/search-tags/search-tags
 
 include ../components/profile-popup/profile-popup
 include ../components/profile-common-popup/profile-common-popup
@@ -26,7 +27,19 @@ block header
     +header(null, null, 'all escorts')
 
 block content
-    +model-list
+    +model-list('For Megan')
+        +search-tag Option 1
+        +search-tag Option 1
+        +search-tag Option 1
+        +search-tag Option 1
+        +search-tag Option 1
+        +search-tag Option 1
+        +search-tag Option 1
+        +search-tag Option 1
+        +search-tag Option 1
+        +search-tag Option 1
+        +search-tag Option 1
+        +search-tag Option 1
 
 block popups
 
