--- a/markup/components/model-list/model-list.styl
+++ b/markup/components/model-list/model-list.styl
@@ -46,6 +46,9 @@
         min-width: 164px
         height: 60px
 
+    &__search-tags
+        padding-top: 14px
+
     &__label
         font-size 16px
         margin-right: 20px
