--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -8,6 +8,9 @@
     padding: 24px 0
     border-bottom: 1px solid borderColor
 
+    button.button
+        width: 100%
+
     +below(768px)
         overflow hidden
 
