--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -4,6 +4,9 @@
     height: 88px
     background-color: bgColor
 
+    &__description
+        transition color .25s ease
+
     & > .navbar__item:not(.navbar__item_dropdown).active
         .navbar__link
             background-color: #fff
@@ -27,6 +30,7 @@
 
     &__dropdown
         box-shadow 0 10px 40px 0 rgba(29, 29, 29, .1)
+        transition all .25s ease
 
         & ^[0]__item
             min-width: auto
@@ -131,8 +135,17 @@
                 color: #fff
 
         &.navbar__item_dropdown:hover:not(.navbar__item_no_hover),
-        &.active
+        &.navbar__item_dropdown.active
             border-color darkGreyColor
+            border-left-color darkGreyColor !important
+
+            .navbar__description {
+                color: mainColor !important
+
+                svg {
+                    fill: mainColor !important
+                }
+            }
 
         &_dropdown:hover, &.active, &_active, &_active:hover
 
