--- a/markup/components/search-bar/search-bar.styl
+++ b/markup/components/search-bar/search-bar.styl
@@ -66,7 +66,7 @@
 
     &__button
         display: block
-        padding: 24px;
+        padding: 0 24px;
         height: 100%;
         border: 0
         background-color: transparent
@@ -74,7 +74,7 @@
     &__icon
         fill: darkGreyColor
         m-transition(all)
-        flex-shirnk: 0
+        flex-shrink: 0
 
         .search-bar_dark &
             fill: mainColor
