--- a/markup/components/heading/heading.pug
+++ b/markup/components/heading/heading.pug
@@ -2,4 +2,4 @@ mixin heading(count)
     +b.heading&attributes(attributes)
         block
         if count
-            span=count
+            sup=count
