--- a/markup/components/heading/heading.styl
+++ b/markup/components/heading/heading.styl
@@ -9,8 +9,13 @@
 
     span
         display: inline-block
-        vertical-align top
-        margin-left: 9px
+        color mainColor
+        font-family fontMain
+
+    sup
+        display: inline-block
+        margin-left: 4px
+        transform: translateY(-4px)
         color mainColor
         font-family fontMain
         font-size 16px
