--- a/markup/components/model-list/model-list-no-models.pug
+++ b/markup/components/model-list/model-list-no-models.pug
@@ -28,7 +28,8 @@ mixin model-list()
                 +e.header-col._sort-ui.hide-desktop
                     +sort-ui
                 +e.header-col.hide-mob
-                    +button(href='model-map.html')._color_white._bg_darkGrey._uppercase View on map
+                    +button(href='model-map.html')._uppercase._color_white._bg_darkGrey
+                        | View on map
             +e.not-found
                 +e.not-found-content
                     +e.not-found-picture
