--- a/markup/pages/model-list-search-result.pug
+++ b/markup/pages/model-list-search-result.pug
@@ -28,7 +28,7 @@ block header
     +header(null, null, 'all escorts')
 
 block content
-    +model-list('For Megan')
+    +model-list('Megan')
 
 block popups
     +filter-extended
