--- a/markup/components/layout-default/layout-default.pug
+++ b/markup/components/layout-default/layout-default.pug
@@ -32,3 +32,4 @@ html(class="no-js loading", lang="en")
         script(src='%=static=%js/separate-js/velocity.min.js')
         script(src='%=static=%js/separate-js/datepicker.min.js')
         script(src='%=static=%js/main%=hash=%%=min=%.js')
+        script(src='%=static=%js/separate-js/ajax/send-report.js')
