--- a/markup/components/profile-common-popup/profile-common-popup.styl
+++ b/markup/components/profile-common-popup/profile-common-popup.styl
@@ -294,3 +294,31 @@
 
             &::placeholder
                 opacity: 1
+
+        &__content
+            display: flex
+            flex-direction: column
+            height: 100%
+            justify-content: center
+            align-items: center
+
+            .heading
+                display inline-block
+
+            +below(768px)
+                padding: 37px 17px
+
+        &__text
+            display: inline-block
+            vertical-align top
+            margin-top: 9px
+            max-width 330px
+            color rgba(darkGreyColor, .59)
+            font-family fontMain
+            font-size 16px
+            font-weight 400
+            line-height 1.375
+            text-align: center
+
+            +below(768px)
+                margin-top: 11px
