--- a/markup/components/send-form/send-form.styl
+++ b/markup/components/send-form/send-form.styl
@@ -4,6 +4,7 @@
     background-color: #fff
     padding: 44px 30px 27px 29px
     box-shadow 0 20px 50px rgba(29, 29, 29, .02)
+    m-transition(all)
 
     .textarea
         box-shadow: none
@@ -31,7 +32,7 @@
         background-color: transparent
         letter-spacing 1px
         display: inline-block !important
-        transition(all)
+        m-transition(all)
 
         +below(768px)
             display: none !important
