--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -142,3 +142,18 @@ select, input, textarea, button {
     border: 0;
     border-radius: 0; // Убираем авто-закругление углов на iOS
 }
+
+.page__preload
+    position fixed
+    top 0
+    left 0
+    right 0
+    bottom 0
+    background-color rgba(#fff, .9)
+    z-index 100000
+    opacity 0
+    pointer-events none
+    m-transition(opacity)
+
+    &.is-active
+        opacity 1
