--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -128,7 +128,7 @@
             margin-left: -30px
             margin-top: -30px
             z-index 1
-            content: ''
+            // content: ''
             display inline-block
             width 60px
             height 60px
@@ -142,8 +142,8 @@
                 opacity 0 !important
                 pointer-events none !important
 
-        + *
-            transition opacity .25s ease
+        // + *
+        //     transition opacity .25s ease
 
 @keyframes swiper-preloader-spin {
   100% {
