--- a/markup/pages/boost-account.pug
+++ b/markup/pages/boost-account.pug
@@ -21,3 +21,9 @@ block popups
 
 block footer
     +footer
+
+block scripts
+    script(src='%=static=%js/separate-js/maps/profile-contacts.js')
+
+
+
