--- a/markup/pages/registration.pug
+++ b/markup/pages/registration.pug
@@ -19,6 +19,8 @@ block popups
 block scripts
     script(src='https://www.google.com/recaptcha/api.js')
     script(src='%=static=%js/separate-js/ajax/registration.js')
+    script(src='%=static=%js/separate-js/maps/profile-contacts.js')
 
 block footer
     +footer
+
