--- a/markup/pages/user-fill-profile.pug
+++ b/markup/pages/user-fill-profile.pug
@@ -29,6 +29,7 @@ block scripts
     script(src='%=static=%js/separate-js/ajax/fill-profile/step4.js')
     script(src='%=static=%js/separate-js/ajax/fill-profile/step8.js')
     script(src='%=static=%js/separate-js/ajax/fill-profile/step9.js')
+    script(src='%=static=%js/separate-js/maps/profile-contacts.js')
 
 block footer
     +footer
