--- a/markup/pages/user-fill-profile2.pug
+++ b/markup/pages/user-fill-profile2.pug
@@ -21,5 +21,6 @@ block popups
 
 block scripts
     script(src='%=static=%js/separate-js/ajax/fill-profile/step2.js')
+    script(src='%=static=%js/separate-js/maps/profile-contacts.js')
 block footer
     +footer
