--- a/markup/pages/user-fill-profile9.pug
+++ b/markup/pages/user-fill-profile9.pug
@@ -21,6 +21,7 @@ block popups
 
 block scripts
     script(src='%=static=%js/separate-js/ajax/fill-profile/step9.js')
+    script(src='%=static=%js/separate-js/maps/profile-contacts.js')
 
 block footer
     +footer
