--- a/markup/pages/agency-list.pug
+++ b/markup/pages/agency-list.pug
@@ -19,6 +19,7 @@ block popups
 
 block scripts
     script(src='%=static=%js/separate-js/ajax/agency-list-load.js')
+    script(src='%=static=%js/separate-js/maps/profile-contacts.js')
 
 block footer
     +footer
