--- a/markup/pages/model-list-no-models.pug
+++ b/markup/pages/model-list-no-models.pug
@@ -27,3 +27,7 @@ block popups
 
 block footer
     +footer
+
+block scripts
+    script(src='%=static=%js/separate-js/ajax/model-list-load.js')
+    script(src='%=static=%js/separate-js/maps/profile-contacts.js')
