--- a/markup/pages/user-fill-profile4.pug
+++ b/markup/pages/user-fill-profile4.pug
@@ -22,6 +22,7 @@ block popups
 
 block scripts
     script(src='%=static=%js/separate-js/maps/user-profile-map.js')
+    script(src='%=static=%js/separate-js/maps/profile-contacts.js')
     script(src='%=static=%js/separate-js/ajax/fill-profile/step4.js')
 
 block footer
