--- a/markup/pages/user-following.pug
+++ b/markup/pages/user-following.pug
@@ -20,6 +20,7 @@ block popups
 
 block scripts
     script(src='%=static=%js/separate-js/ajax/model-list-load.js')
+    script(src='%=static=%js/separate-js/maps/profile-contacts.js')
 
 block footer
     +footer
