--- a/markup/pages/user-messages.pug
+++ b/markup/pages/user-messages.pug
@@ -23,3 +23,4 @@ block footer
 
 block scripts
     script(src='%=static=%js/separate-js/user-messages.js')
+    script(src='%=static=%js/separate-js/maps/profile-contacts.js')
