--- a/markup/components/profile-popup/profile-popup.styl
+++ b/markup/components/profile-popup/profile-popup.styl
@@ -42,12 +42,12 @@
             display: block
 
     &__buttons
-        position absolute
+        position fixed
         top: 50vh
         left: 0
         right: 0
-        transform: translateY(-50%)
-        width 100%
+        transform: translateY(-50%) !important
+        width calc(100% - 17px)
         display flex
         justify-content space-between
         z-index: 50
