--- a/markup/components/user-profile/user-profile.styl
+++ b/markup/components/user-profile/user-profile.styl
@@ -45,7 +45,9 @@
                 margin-top: 0
 
     &__profile-card
-        width: 316px
+        position sticky
+        top: 0
+        padding-bottom: 300px;
         transform: translate3d(0, 0, 0);
         will-change: transform;
 
@@ -53,6 +55,7 @@
             position: static !important
             transform: translate3d(0, 0, 0) !important
             width: 100%
+            padding-bottom 0
 
         &.fixed
             position: fixed
