--- a/markup/components/profile-popup/profile-popup.styl
+++ b/markup/components/profile-popup/profile-popup.styl
@@ -47,7 +47,6 @@
         left: 0
         right: 0
         transform: translateY(-50%) !important
-        width calc(100% - 17px)
         display flex
         justify-content space-between
         z-index: 50
@@ -100,7 +99,7 @@
             fill: rgba(#fff, .6)
 
         &_prev
-            left: 0
+            left: 0 !important
 
             &.swiper-button-disabled
                 transform: translate3d(-100%, -50%, 0)
@@ -113,7 +112,7 @@
                 transform: translate(-50%, -50%) rotate(-180deg)
 
         &_next
-            right: 0
+            right: 0 !important
 
             &.swiper-button-disabled
                 transform: translate3d(100%, -50%, 0)
