--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -11,7 +11,7 @@
     overflow-x: hidden
 
     &_profile-popup
-        position absolute !important
+        // position absolute !important
         display: none
         box-sizing: content-box
 
