--- a/markup/components/field/field.styl
+++ b/markup/components/field/field.styl
@@ -1,5 +1,6 @@
 .field
     display: block
+    position relative
 
     &__textarea
         display: block
@@ -24,6 +25,7 @@
         height: 60px
         padding: 0 20px
         background-color: transparent
+        z-index 1
 
         &-ok
             display: block
