--- a/markup/components/search-bar/search-bar.styl
+++ b/markup/components/search-bar/search-bar.styl
@@ -33,7 +33,7 @@
         font-size: 16px
         min-width: 0
         position: relative;
-        z-index: 10;
+        z-index: 50;
 
         &::placeholder
             opacity 0
@@ -56,6 +56,7 @@
         transform: translateY(-50%)
         pointer-events: none
         ellipsis(100%)
+        z-index -1
 
         .search-bar_dark &
             color: #fff !important
