--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -157,3 +157,11 @@ select, input, textarea, button {
 
     &.is-active
         opacity 1
+
+input, textarea {
+  -webkit-user-select: text !important;
+  -khtml-user-select: text !important;
+  -moz-user-select: text !important;
+  -ms-user-select: text !important;
+  user-select: text !important;
+}
