--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -158,7 +158,7 @@ select, input, textarea, button {
     &.is-active
         opacity 1
 
-input, textarea, [contenteditable] {
+input, textarea, [contenteditable],.textarea {
   -webkit-user-select: text !important;
   -khtml-user-select: text !important;
   -moz-user-select: text !important;
