--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -3,8 +3,6 @@
 
 html *
     -webkit-tap-highlight-color: rgba(0,0,0,0);
-    -webkit-user-select: none;
-    -webkit-touch-callout:none;
 
 .hide-when-header-fixed
     m-transition(all)
@@ -159,9 +157,9 @@ select, input, textarea, button {
         opacity 1
 
 input, textarea, [contenteditable],.textarea {
-  -webkit-user-select: text !important;
-  -khtml-user-select: text !important;
-  -moz-user-select: text !important;
-  -ms-user-select: text !important;
-  user-select: text !important;
-}
+//   -webkit-user-select: text !important;
+//   -khtml-user-select: text !important;
+//   -moz-user-select: text !important;
+//   -ms-user-select: text !important;
+//   user-select: text !important;
+// }
