--- a/markup/components/icon-button/icon-button.styl
+++ b/markup/components/icon-button/icon-button.styl
@@ -11,6 +11,8 @@
     iziAnimation()
 
     svg
+        position relative
+        z-index 1
         transition: all .25s ease-in-out
 
     &_flex
