--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -162,4 +162,4 @@ input, textarea, [contenteditable],.textarea {
 //   -moz-user-select: text !important;
 //   -ms-user-select: text !important;
 //   user-select: text !important;
-// }
+}
