--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -139,7 +139,7 @@
             display block
 
             + *
-                opacity 0 !important
+                visibility hidden !important
                 pointer-events none !important
 
         // + *
