--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -156,10 +156,10 @@ select, input, textarea, button {
     &.is-active
         opacity 1
 
-input, textarea, [contenteditable],.textarea {
-//   -webkit-user-select: text !important;
-//   -khtml-user-select: text !important;
-//   -moz-user-select: text !important;
-//   -ms-user-select: text !important;
-//   user-select: text !important;
+input, textarea, [contenteditable],.textarea__control {
+  -webkit-user-select: text !important;
+  -khtml-user-select: text !important;
+  -moz-user-select: text !important;
+  -ms-user-select: text !important;
+  user-select: text !important;
 }
