--- a/markup/components/dotted-dropdown/dotted-dropdown.styl
+++ b/markup/components/dotted-dropdown/dotted-dropdown.styl
@@ -27,6 +27,7 @@
         m-transition(border-color, background-color)
         cursor: pointer
         iziAnimation()
+        performance()
 
         &:hover
             border-width: 0
