--- a/markup/components/textarea/textarea.styl
+++ b/markup/components/textarea/textarea.styl
@@ -5,6 +5,7 @@
     box-shadow 0 20px 50px rgba(29, 29, 29, .02)
 
     &__control
+        position relative
         white-space pre-line
         width: 100%
         color darkGreyColor
@@ -14,6 +15,8 @@
         line-height 1.375
         padding-bottom: 20px
         border-bottom: 1px solid borderColor
+        performance()
+        z-index 5
 
         &[placeholder]:empty::before
             content: attr(placeholder)
