--- a/markup/pages/agency.pug
+++ b/markup/pages/agency.pug
@@ -21,4 +21,5 @@ block footer
     +footer
 
 block scripts
+    script(src='%=static=%js/separate-js/ajax/model-list-load.js')
     script(src='%=static=%js/separate-js/maps/profile-contacts.js')
