--- a/markup/components/profile-popup/profile-popup.styl
+++ b/markup/components/profile-popup/profile-popup.styl
@@ -1,5 +1,11 @@
 #profile-popup
     z-index 100000
+    top: 0 !important;
+    right 0 !important;
+    left 0 !important;
+    bottom 0 !important;
+    width auto !important;
+    height auto !important;
 
 .profile-popup
     display: block
