--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -163,3 +163,6 @@ input, textarea, [contenteditable],.textarea__control {
   -ms-user-select: text !important;
   user-select: text !important;
 }
+
+.disabled-scroll
+    overflow: hidden
